# DjangoTestApp

./: Dockerfile  docker-compose.yaml  env.template  pyproject.toml
mysite/mysite/: settings.py
