[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    { name = "Ira11111", email = "mirina-0208@yandex.ru" }
]
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.1.7)",
    "pillow (==11.1.0)",
    "gunicorn (==23.0.0)",
    "django-debug-toolbar (==4.2.0)",
    "djangorestframework (==3.14.0)",
    "django-filter (==22.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
